apps/linkerd-viz/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    linkerd.io/created-by: linkerd/helm stable-2.13.5
    linkerd.io/inject: enabled
  labels:
    component: web
    linkerd.io/extension: viz
    namespace: linkerd-viz
  name: web
  namespace: linkerd-viz
spec:
  clusterIP: 172.20.209.152
  clusterIPs:
    - 172.20.209.152
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8084
      protocol: TCP
      targetPort: 8084
    - name: admin-http
      port: 9994
      protocol: TCP
      targetPort: 9994
  selector:
    component: web
    linkerd.io/extension: viz
  sessionAffinity: None
  type: ClusterIP
